--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,20 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies for both client and server
 /node_modules
-/.pnp
-.pnp.js
+/client/node_modules
+/server/node_modules
 
-# testing
-/coverage
+# Production build folder
+/client/build
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+
+# OS-generated files
+.DS_Store
+Thumbs.db
