--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/server/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
