--- a/vercel.json
+++ b/vercel.json
@@ -7,18 +7,13 @@
     },
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "use": "@vercel/static-build"
     }
   ],
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/server/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
     }
   ]
 }
